# vulk-proto

./: Cargo.toml
game/: Cargo.toml
game/src/: main.rs
rendering/: Cargo.toml
rendering/src/: lib.rs  shaders.rs  window.rs
